--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mark Watney</title>
+    <title>Brett A. Hogan</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
@@ -9,12 +9,12 @@
   <body>
     <div class="header">
       <img src="photo.png">
-      <h1>Mark Watney</h1>
-      <h2>Botanist and Mechanical Engineer</h2>
+      <h1>Brett A. Hogan</h1>
+      <h2>Northwestern Student</h2>
       <p>Contact Me:</p>
       <ul>
-        <li><a href="http://twitter.com/MarkWatneyAres3">Twitter</a></li>
-        <li><a href="http://facebook.com/MarkWatneyAres3">Facebook</a></li>
+        <li><a href="http://twitter.com/hogan_brett">Twitter</a></li>
+        <li><a href="http://facebook.com/brett.hogan3">Facebook</a></li>
       </ul>
     </div>
 
