--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="header">
-      <img src="photo.png">
+      <img width="500"src="photo.jpg">
       <h1>Brett A. Hogan</h1>
       <h2>Northwestern Student</h2>
       <p>Contact Me:</p>
@@ -20,34 +20,32 @@
 
     <h3>Summary</h3>
     <p>
-      Mark is a specialist for NASA and currently assigned to the Ares 3 mission to Mars.
-      He has a track record of radical ingenuity and a never-say-die attitude.
-      He is a good team player (though he tends to insult them sometimes).
-      Mark can improvise creative solutions with nothing more than duct tape and water.
-      However, he tends to get left behind by his colleagues.
-    </p>
+      Brett is a student at the Kellogg School of Management at Northwestern University.
+      He is also a Senior Associate at Heitman, a real estate investment management firm.
+      He enjoys reading, running, and working with technology.</p>
 
     <h3>Experience</h3>
 
-    <h4>NASA Engineer, 2031 - Present</h4>
-    <p>Mars mission specialist.</p>
-    <p>Botanist researcher and extraterrestrial farmer.</p>
+    <h4>Senior Associate at Heitman, 2014 - Present</h4>
+    <p>Client Service and Marketing Associate.</p>
+    <p>Sales support and CRM administration.</p>
 
-    <h4>Botanist, 2028-2031</h4>
-    <p>Potato photosynthesis specialist.</p>
+    <h4>Associate at Heitman, 2012 - 2014</h4>
+    <p>Client Service and Marketing Associate.</p>
+    <p>RFP writing.</p>
 
     <h3>Skills</h3>
     <ul>
-      <li>Astronaut</li>
-      <li>Growing plants</li>
-      <li>Fixing computers</li>
-      <li>Driving Mars rovers</li>
+      <li>Atom, HTML, and CSS!</li>
+      <li>Helping family with technology</li>
+      <li>Microsoft Office</li>
+      <li>Making tea</li>
     </ul>
 
     <h3>Education</h3>
     <ul>
-      <li>PhD in Mechanical Engineering, <em>Northwestern University, 2028</em></li>
-      <li>Masters of Science in Botany, <em>Northwestern University, 2029</em></li>
+      <li>Masters of Business Administration with concentrations in Managerial Analytics, Marketing, <em>Northwestern University, 2016</em></li>
+      <li>Bachelors of Science in Finance, <em>Miami University, 2009</em></li>
     </ul>
 
 
