--- a/travel.html
+++ b/travel.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Brett A. Hogan</title>
+    <title>My Travels</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
   <body>
     <div class="header">
-      <img width="500"src="photo.jpg">
-      <h1>Brett A. Hogan</h1>
-      <h2><font color="Purple">Northwestern Student</font></h2>
+      <img width="500"src="world.png">
+      <h1>Oh The Places I've Gone</h1>
+      <h2>A look at where I've been and where I'm going</h2>
       <p>Contact Me:</p>
       <ul>
         <li><a href="http://twitter.com/hogan_brett">Twitter</a></li>
@@ -20,15 +20,17 @@
 
     <h3>Summary</h3>
     <p>
-      Brett is a student at the Kellogg School of Management at Northwestern University.
-      He is also a Senior Associate at Heitman, a real estate investment management firm.
-      He enjoys reading, running, and working with technology.</p>
+      I've taken a few great trips over the last few years. I've also got a pretty long list of places to visit in the future.</p>
 
-    <h3>Experience</h3>
+    <h3>Greece</h3>
 
-    <h4>Senior Associate at Heitman, 2014 - Present</h4>
-    <p>Client Service and Marketing Associate.</p>
-    <p>Sales support and CRM administration.</p>
+    <h4>In 2013, my wife and I went on a honeymoon in Greece.</h4>
+    <p>Our travels took us to a few great places, such as:</p>
+    <ul>
+      <li>Athens</li>
+      <li>Mykonos</li>
+      <li>Paros</li>
+      <li>Santorini</li>
 
     <h4>Associate at Heitman, 2012 - 2014</h4>
     <p>Client Service and Marketing Associate.</p>
