--- a/travel.html
+++ b/travel.html
@@ -25,31 +25,35 @@
     <h3>Greece</h3>
 
     <h4>In 2013, my wife and I went on a honeymoon in Greece.</h4>
+    <img width="500"src="greece.JPG">
     <p>Our travels took us to a few great places, such as:</p>
     <ul>
       <li>Athens</li>
       <li>Mykonos</li>
       <li>Paros</li>
       <li>Santorini</li>
-
-    <h4>Associate at Heitman, 2012 - 2014</h4>
-    <p>Client Service and Marketing Associate.</p>
-    <p>RFP writing.</p>
-
-    <h3>Skills</h3>
-    <ul>
-      <li>Atom, HTML, and CSS!</li>
-      <li>Helping family with technology</li>
-      <li>Microsoft Office</li>
-      <li>Making tea</li>
     </ul>
 
-    <h3>Education</h3>
+    <h3>Copenhagen</h3>
+    <h4>In 2015, I studied abroad in Copenhagen, Denmark.</p>
+    <img width="500"src="copenhagen.JPG">
+
+    <h3>Brugge and Amsterdam</h3>
+    <h4>In 2015, after Copenhagen, my wife and I travelled to Brugge, Belgium and Amsterdam, The Netherlands.</p>
+    <img width="500"src="brugge.JPG">
+    <img width="500"src="holland.JPG">
+
+    <h3>Places I'd like to go</h3>
+    <h4>In addition to the places I've been, there are several places I'd like to visit someday</h4>
     <ul>
-      <li>Masters of Business Administration with concentrations in Managerial Analytics, Marketing, <em>Northwestern University, 2016</em></li>
-      <li>Bachelors of Science in Finance, <em>Miami University, 2009</em></li>
+      <li>The United Kingdom and Ireland <em>(all of it)</em></li>
+      <li>Japan</li>
+      <li>The Netherlands <em>(again)</em></li>
+      <li>Thailand</li>
+      <li>The Czech Republic</li>
+      <li>Chile</li>
+      <li>Italy</li>
+      <li>France</li>
     </ul>
-
-
   </body>
 </html>
